--- a/BOT.ioc
+++ b/BOT.ioc
@@ -14,7 +14,7 @@ Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
 Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.0.Mode=DMA_NORMAL
+Dma.USART1_RX.0.Mode=DMA_CIRCULAR
 Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
@@ -316,7 +316,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -367,7 +367,7 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
-SH.S_TIM1_CH2.0=TIM1_CH2,Output Compare2 CH2
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,Output Compare2 CH2
 SH.S_TIM2_CH2.ConfNb=1
@@ -379,8 +379,8 @@ SH.S_TIM5_CH2.0=TIM5_CH2,Output Compare2 CH2
 SH.S_TIM5_CH2.ConfNb=1
 SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
 SH.S_TIM9_CH1.ConfNb=1
-TIM1.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-Output Compare2 CH2
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.IPParameters=Channel-PWM Generation2 CH2
 TIM2.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-Output Compare2 CH2
 TIM3.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
