完成部分调参

--- a/BOT.ioc
+++ b/BOT.ioc
@@ -107,34 +107,38 @@ Mcu.Pin20=PE11
 Mcu.Pin21=PE12
 Mcu.Pin22=PB10
 Mcu.Pin23=PB11
-Mcu.Pin24=PD11
-Mcu.Pin25=PD12
-Mcu.Pin26=PD13
-Mcu.Pin27=PC7
-Mcu.Pin28=PA9
-Mcu.Pin29=PA10
+Mcu.Pin24=PD10
+Mcu.Pin25=PD11
+Mcu.Pin26=PD12
+Mcu.Pin27=PD13
+Mcu.Pin28=PG6
+Mcu.Pin29=PC7
 Mcu.Pin3=PE5
-Mcu.Pin30=PG11
-Mcu.Pin31=PG12
-Mcu.Pin32=PG13
-Mcu.Pin33=PG14
-Mcu.Pin34=PB3
-Mcu.Pin35=PE0
-Mcu.Pin36=PE1
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin38=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PC12
+Mcu.Pin33=PG11
+Mcu.Pin34=PG12
+Mcu.Pin35=PG13
+Mcu.Pin36=PG14
+Mcu.Pin37=PG15
+Mcu.Pin38=PB3
+Mcu.Pin39=PE0
 Mcu.Pin4=PF9
-Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin41=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin42=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin40=PE1
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin46=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin47=VP_TIM9_VS_ClockSourceINT
 Mcu.Pin5=PF10
 Mcu.Pin6=PH0-OSC_IN
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
-Mcu.PinsNb=44
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -219,10 +223,16 @@ PC1.GPIO_Label=COL2
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC1.Locked=true
 PC1.Signal=GPIO_Output
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=KEY2
+PC12.Locked=true
+PC12.Signal=GPIO_Input
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=BELT
 PC7.Locked=true
 PC7.Signal=GPIO_Output
+PD10.Locked=true
+PD10.Signal=GPIO_Output
 PD11.GPIOParameters=GPIO_Label
 PD11.GPIO_Label=MOTOR2_DIR
 PD11.Locked=true
@@ -296,6 +306,12 @@ PG14.GPIOParameters=GPIO_Label
 PG14.GPIO_Label=ROW4
 PG14.Locked=true
 PG14.Signal=GPIO_Input
+PG15.GPIOParameters=GPIO_Label
+PG15.GPIO_Label=KEY1
+PG15.Locked=true
+PG15.Signal=GPIO_Input
+PG6.Locked=true
+PG6.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
