--- a/BOT.ioc
+++ b/BOT.ioc
@@ -387,7 +387,7 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,Output Compare2 CH2
 SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2,Output Compare2 CH2
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Output Compare2 CH2
 SH.S_TIM4_CH2.ConfNb=1
@@ -398,9 +398,12 @@ SH.S_TIM9_CH1.ConfNb=1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.IPParameters=Channel-PWM Generation2 CH2
 TIM2.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-Output Compare2 CH2
-TIM3.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-Output Compare2 CH2
+TIM2.IPParameters=Prescaler,Channel-Output Compare2 CH2,Period
+TIM2.Period=8000000
+TIM2.Prescaler=1000
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler
+TIM3.Prescaler=1000
 TIM4.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
 TIM4.IPParameters=Channel-Output Compare2 CH2
 TIM5.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
